Fixed nav alignment isue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -45,6 +45,12 @@ header.bk-header {
   display: block;
   float: left;
   margin-top: 16px;
+  @media (max-width: 850px) {
+    margin-top: 0;
+  }
+  @media @tablet {
+    margin-top: 16px;
+  }
 }
 
 /* LOGO */
@@ -53,6 +59,9 @@ header.bk-header {
   display: block;
   padding: 8px 10px 8px 0;
   float: left;
+  @media (max-width: 850px) {
+    padding-bottom: 0;
+  }
 }
 
 .widget.companyheader {
@@ -102,8 +111,7 @@ footer.bk-footer .widget.content {
 }
 
 .widget.extendednavigation ul li {
-    float: left;
-    display: block;
+    display: inline-block;
 }
 
 .widget.extendednavigation ul li a,
@@ -1555,7 +1563,7 @@ footer.bk-footer .widget.profile .bk-profile-socialicons span a {
     width: 100%;
     display: block;
     margin: 0 auto;
-    padding: 10px 0 0;
+    padding: 10px 0;
   }
 
   .widget.companyname a {
@@ -1675,10 +1683,6 @@ footer.bk-footer .widget.profile .bk-profile-socialicons span a {
   }
 
  /* COMPANY HEADER */
-
-  .companyheader {
-    padding: 3px 5px 0px 0px;
-  }
 
   .widget.companyname a {
     font-size:bkscale(@font-swatch1-font-size, 0.6);
